# BoolForge

./: .buildinfo  .buildinfo.bak  .gitignore  BoolForge_Tutorials.blg  BoolForge_Tutorials.toc  CITATION.cff  LICENSE  Makefile  README.md  arxiv_abstract.md  arxiv_backmatter.md  arxiv_frontmatter.md  bf.html  bio_models.html  bn.html  boolean_function.html  boolean_network.html  build_tutorials_pdf.sh  build_tutorials_pdf2.sh  build_tutorials_pdf3.sh  build_tutorials_simple.sh  build_tutorials_simple2.sh  build_tutorials_simple3.sh  build_tutorials_simple4.sh  build_tutorials_tex.sh  build_tutorials_tex2.sh  build_tutorials_tex3.sh  debug.tex  docs.html  documentation.html  generate.html  genindex.html  index.html  install.html  installation.html  make.bat  manual.html  mkdocs.yml  modularity.html  modules.html  (+12 more)
BNToolbox/: __init__.py  boolean_function.py  generate.py
_modules/: index.html
_sources/: bf.rst.txt  bn.rst.txt  boolean_function.rst.txt  boolean_network.rst.txt  docs.rst.txt  documentation.rst.txt  index.rst.txt  install.rst.txt  modularity.rst.txt  modules.rst.txt  tutorial.rst.txt  utils.rst.txt
boolforge/: __init__.py  analyze_BF.py  bio_models.py  boolean_function.py  boolean_network.py  boolean_network2.py  generate.py  modular_boolean_network.py  modularity.py  modularity_utils.py  multistate_function.py  multistate_network.py  out.xlsx  out_n4.xlsx  utils.py  utils_multistate.py  wiring_diagram.py  wiring_diagram_save.py  ~$out.xlsx
docs/: HOW-TO-DOCS.html  bio_models.rst  bn.rst  boolean_function.rst  boolean_network.rst  conf.py  docs.rst  documentation.rst  generate.rst  index.md  index.rst  install.md  install.rst  installation.rst  manual.rst  tutorial.rst  utils.rst  wiring_diagram.rst
paper/: figures 2.pptx  figures.pptx  plot_run_time_of_main_routines.py
papers/: figures_boolforge_paper.pptx  figures_uniform_sampler_paper.pptx
src/: boolean_network.py
tests/: runtime_comparisons_numba.py  test_conversions.py  test_generate.py  test_generate_functions.py  test_generate_networks.py  test_string_parser.py  test_uniform_canalizing_samplers.py
tutorials/: .DS_Store 2  .gitignore  01.py  01_working_with_boolean_functions.ipynb  02_advanced_concepts_boolean_functions.ipynb  02_advanced_concepts_for_Boolean_functions.md  02_tutorial.ipynb  03_canalization.ipynb  03_tutorial.ipynb  04_generate_random_boolean_functions.ipynb  04_grn_tutorial.ipynb  04_random_Boolean_function_generation.md  05_pipelines_random_function_generator.ipynb  05_random_function_generator_use_cases.md  (+60 more)
(+244 files in other folders)
